--- a/Main/Views/About/HamidJalalat.cshtml
+++ b/Main/Views/About/HamidJalalat.cshtml
@@ -24,11 +24,15 @@
             border-radius: 0 0 4px 4px;
         }
 </style>
-<h4>حمید جلالت</h4>
-<h4>Hamid Jalalat</h4>
+<br />
 <div class="row">
+
+
     <div class="col-sm-6">
+        <div class="row">  <div class="col-sm-4"><h4>حمید جلالت</h4></div></div>
+        <div class="row">  <div class="col-sm-4"><h4>Hamid Jalalat</h4></div></div>
         <div class="row">
+     
             <div class="col-sm-2">
                 <label>موبایل</label>
             </div>
@@ -61,7 +65,8 @@
         </div>
     </div>
 
-    <div class="col-sm-4">
+    <div class="col-sm-6">
+      
         <img style="width:50%" src="~/Content/Image/26438617.png" />
     </div>
     
