--- a/Main/Views/About/HamidJalalat.cshtml
+++ b/Main/Views/About/HamidJalalat.cshtml
@@ -55,6 +55,14 @@
             </div>
        
         </div>
+        <br />
+        <div class="row">
+
+            <div class="col-sm-4">
+                <a target="_blank" href="https://ir.linkedin.com/in/hamid-jalalat-b719aa145">LinkedIn</a>
+            </div>
+
+        </div>
 
         <br />
         <div class="row">
