--- a/Main/Views/About/HamidJalalat.cshtml
+++ b/Main/Views/About/HamidJalalat.cshtml
@@ -4,6 +4,7 @@
     ViewBag.Title = "حمید جلالت";
 }
 <style>
+
            .basket-header {
             border: 1px solid #d8d8d8;
             padding: 7px;
@@ -25,7 +26,7 @@
         }
 </style>
 <br />
-<div class="row">
+<div class="row info" >
 
 
     <div class="col-sm-6">
@@ -75,7 +76,7 @@
 
     <div class="col-sm-6">
       
-        <img style="width:50%" src="~/Content/Image/26438617.png" />
+        <img style="width:50%" alt="hamid jalalat" src="~/Content/Image/26438617.jpg" />
     </div>
     
   
