--- a/Main/Views/Shared/_Layout_fa-IR.cshtml
+++ b/Main/Views/Shared/_Layout_fa-IR.cshtml
@@ -62,6 +62,10 @@
                 <div class="carousel-item">
                     <img src="~/Content/Image/chicago.png" alt="Chicago">
                 </div>
+                <div class="carousel-item">
+                    <img src="~/Content/Image/hero-banner1400x500-fast-food.png" alt="pizza" />
+               
+                </div>
           
             </div>
 
