--- a/Main/Views/About/HamidJalalat.cshtml
+++ b/Main/Views/About/HamidJalalat.cshtml
@@ -109,7 +109,7 @@
 @foreach (var item in Model)
 {<br />
     <div class="card" >
-        <div class="card-header" style="background-color:#4cd035;color:white">
+        <div class="card-header green" >
             <h5 class="panel-title"  >
                 @item.UserName
             </h5>
