--- a/Main/Views/About/HamidJalalat.cshtml
+++ b/Main/Views/About/HamidJalalat.cshtml
@@ -30,48 +30,40 @@
 
 
     <div class="col-sm-6">
-        <div class="row">  <div class="col-sm-4"><h4>حمید جلالت</h4></div></div>
-        <div class="row">  <div class="col-sm-4"><h4>Hamid Jalalat</h4></div></div>
+        <div class="row"> 
+         <div class="col-sm-4"><h4>حمید جلالت</h4>
+            </div>
+        </div>
+        <br />
         <div class="row">
      
-            <div class="col-sm-2">
-                <label>موبایل</label>
+            <div class="col-2">
+                <label>موبایل :</label>
             </div>
-            <div class="col-sm-4">
+            <div class="col-4">
                 <p>09124881649</p>
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-2">
-                <label>ایمیل</label>
+            <div class="col-2">
+                <label>ایمیل :</label>
             </div>
-            <div class="col-sm-4">
+            <div class="col-4">
                 <p>jalalathamid@yahoo.com</p>
             </div>
         </div>
+  <br />
+        <br />
         <div class="row">
          
-            <div class="col-sm-4">
-                <a target="_blank" href="https://jobinja.ir/user/EJ-3414824?utm_source=physical&utm_medium=qr_code&utm_campaign=cv_builder">رزومه</a>
+            <div class="col-sm-6">
+                <a target="_blank" href="https://jobinja.ir/user/EJ-3414824?utm_source=physical&utm_medium=qr_code&utm_campaign=cv_builder">رزومه</a>|
+                <a target="_blank" href="https://ir.linkedin.com/in/hamid-jalalat-b719aa145">LinkedIn</a>|
+               <a target="_blank" href="https://github.com/hamidjalalat">Github</a>|
             </div>
        
         </div>
-        <br />
-        <div class="row">
-
-            <div class="col-sm-4">
-                <a target="_blank" href="https://ir.linkedin.com/in/hamid-jalalat-b719aa145">LinkedIn</a>
-            </div>
-
-        </div>
-
-        <br />
-        <div class="row">
-  
-            <div class="col-sm-4">
-                <a target="_blank" href="https://github.com/hamidjalalat">Github</a>
-            </div>
-        </div>
+   
     </div>
 
     <div class="col-sm-6">
@@ -96,8 +88,8 @@
 
 
         <div class="row">
-            <div class="col-sm-1"></div>
-            <div class="col-sm-2">
+            <div class="col-1"></div>
+            <div class="col-2">
                 <br />
                 <button class="btn btn-primary">ارسال</button>
 
