--- a/Main/Views/RegisterOrder/Index.cshtml
+++ b/Main/Views/RegisterOrder/Index.cshtml
@@ -34,69 +34,71 @@
     @Html.ActionLink("ثبت نهایی", "RegisterFactor", null, new { @class = "btn btn-primary" })
     <br />
     <br />
-    <table class="table " >
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Price)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.count)
-            </th>
-            <th>
-               جمع
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
+    <div class="col-12 table-responsive">
+        <table class="table ">
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Price)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.count)
+                </th>
+                <th>
+                    جمع
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Description)
+                </th>
 
 
-            <th>
+                <th>
 
-            </th>
+                </th>
 
-        </tr>
+            </tr>
 
-        @foreach (var item in Model)
-        {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            <label>@item.Price.ToString("#,##0 ")</label>
-       
-            
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.count)
-        </td>
-        <td>
-
-            @{
-                int Total = item.Price * item.count;
-                SumTotal = SumTotal + Total;
-                <span>@Total.ToString("#,##0 ")</span>
-
-            }
-         
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        <label>@item.Price.ToString("#,##0 ")</label>
 
 
-        <td>
-            <img src="@item.Image_url" class="image" alt="عکس" />
-        </td>
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.count)
+                    </td>
+                    <td>
 
-    </tr>
-        }
-   
+                        @{
+                            int Total = item.Price * item.count;
+                            SumTotal = SumTotal + Total;
+                            <span>@Total.ToString("#,##0 ")</span>
 
-    </table>
+                        }
+
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Description)
+                    </td>
+
+
+                    <td>
+                        <img src="@item.Image_url" class="image" alt="عکس" />
+                    </td>
+
+                </tr>
+                            }
+
+
+        </table>
+    </div>
     @if (IsMaxEnable == "1" && SumTotal< MaxOrder)
     {
         SumTotal = SumTotal + Convert.ToInt32(Maxvalue);
