--- a/Main/Views/About/HamidJalalat.cshtml
+++ b/Main/Views/About/HamidJalalat.cshtml
@@ -4,7 +4,9 @@
     ViewBag.Title = "حمید جلالت";
 }
 <style>
-
+    .card-header {
+        max-height:34px ;
+    }
            .basket-header {
             border: 1px solid #d8d8d8;
             padding: 7px;
@@ -52,14 +54,15 @@
                 <p>jalalathamid@yahoo.com</p>
             </div>
         </div>
+
   <br />
         <br />
         <div class="row">
-         
             <div class="col-sm-6">
-                <a target="_blank" href="https://jobinja.ir/user/EJ-3414824?utm_source=physical&utm_medium=qr_code&utm_campaign=cv_builder">رزومه</a>|
+                <a target="_blank" href="https://t.me/hamidjalalat">Telegram</a>|
+                <a target="_blank" href="https://jobinja.ir/user/EJ-3414824?utm_source=physical&utm_medium=qr_code&utm_campaign=cv_builder">jobinja</a>|
                 <a target="_blank" href="https://ir.linkedin.com/in/hamid-jalalat-b719aa145">LinkedIn</a>|
-               <a target="_blank" href="https://github.com/hamidjalalat">Github</a>|
+               <a target="_blank" href="https://github.com/hamidjalalat">Github</a>
             </div>
        
         </div>
