--- a/Main/Views/RegisterOrder/Index.cshtml
+++ b/Main/Views/RegisterOrder/Index.cshtml
@@ -34,7 +34,7 @@
     @Html.ActionLink("ثبت نهایی", "RegisterFactor", null, new { @class = "btn btn-primary" })
     <br />
     <br />
-    <div class="col-12 table-responsive">
+    <div class="col-md-12 table-responsive">
         <table class="table ">
             <tr>
                 <th>
