--- a/Main/Css/Order/OrderCustomer.css
+++ b/Main/Css/Order/OrderCustomer.css
@@ -58,7 +58,7 @@
 
 .scroll {
     direction: ltr;
-    max-height: 1000px;
+    max-height: 100%;
     overflow-y: auto;
     overflow-y: scroll; /* Add the ability to scroll */
 }
